# xstatic-angular-notify

./: .gitreview  LICENSE  README.txt  setup.cfg  setup.py
xstatic/pkg/angular_notify/: __init__.py
